# camera_model

./: CMakeLists.txt  README.md  instruction
examples/: 1_readcamera_from_yaml.cpp  2_readcamera_from_scratch.cpp  sample_kannala_brandt.yaml  sample_pinhole.yaml
